# gps-watch-code

./: Cargo.toml  README.md
.cargo/: config
src/: display.rs  error.rs  logging.rs  main.rs  nmea.rs  rt.rs  state.rs
src/peripherals/: alert.rs  display.rs  gps.rs  mod.rs
src/state/: clock.rs  mod.rs
